Use updated jtoolprovider plugin argument aliases