@@ -13,7 +13,7 @@
         <!-- This should be the . version of the project artifactId -->
         <java-mod-name>maven.jpackage.template</java-mod-name>
 
-        <!-- These version numbers are used in both the macOS and Windows installed version -->
+        <!-- These version numbers are used in both the macOS and Windows profiles -->
         <javafx-mods-version>javafx-jmods-15.0.1</javafx-mods-version>
         <javafx-libs-version>javafx-sdk-15.0.1</javafx-libs-version>
 
@@ -27,7 +27,7 @@
         <maven.compiler.target>11</maven.compiler.target>
 
         <!-- This project uses the https://github.com/wiverson/jtoolprovider-plugin to invoke jdeps and jpackage -->
-        <jtoolprovider.version>1.0.23</jtoolprovider.version>
+        <jtoolprovider.version>1.0.25</jtoolprovider.version>
     </properties>
 
     <dependencies>
@@ -191,13 +191,10 @@
                         </goals>
                         <configuration>
                             <toolName>jdeps</toolName>
+                            <modulePath>${javafx.libs}</modulePath>
+                            <addModules>javafx.base,javafx.controls,javafx.graphics,java.logging</addModules>
+                            <generateModuleInfo>${project.build.directory}/work</generateModuleInfo>
                             <args>
-                                <arg>--module-path</arg>
-                                <arg>${javafx.libs}</arg>
-                                <arg>--add-modules</arg>
-                                <arg>javafx.base,javafx.controls,javafx.graphics,java.logging</arg>
-                                <arg>--generate-module-info</arg>
-                                <arg>${project.build.directory}/work</arg>
                                 <arg>${project.build.directory}/shaded-jar/${project.artifactId}.jar</arg>
                             </args>
                         </configuration>
@@ -263,23 +260,16 @@
                                 </goals>
                                 <configuration>
                                     <toolName>jlink</toolName>
+                                    <modulePath>${java.home}/jmods/:${project.build.directory}/modules/:${javafx.mods}
+                                    </modulePath>
+                                    <addModules>${java-mod-name},${modules-in-use}</addModules>
+                                    <launcher>${project.artifactId}=${java-mod-name}/${main-class}</launcher>
+                                    <output>${project.build.directory}/jlink-image</output>
                                     <args>
-                                        <!--                                        <arg>&#45;&#45;strip-native-commands</arg>-->
                                         <arg>--strip-debug</arg>
                                         <arg>--no-header-files</arg>
                                         <arg>--no-man-pages</arg>
                                         <arg>--compress=2</arg>
-                                        <arg>--module-path</arg>
-                                        <arg>
-                                            ${java.home}/jmods/:${project.build.directory}/modules/:${javafx.mods}
-                                        </arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>${java-mod-name},${modules-in-use}
-                                        </arg>
-                                        <arg>--launcher</arg>
-                                        <arg>${project.artifactId}=${java-mod-name}/${main-class}</arg>
-                                        <arg>--output</arg>
-                                        <arg>${project.build.directory}/jlink-image</arg>
                                     </args>
                                 </configuration>
                             </execution>
@@ -319,27 +309,17 @@
                                 </goals>
                                 <configuration>
                                     <toolName>jpackage</toolName>
-                                    <args>
-                                        <arg>--jlink-options</arg>
-                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
-                                            --compress=2
-                                        </arg>
-                                        <arg>--name</arg>
-                                        <arg>TestApp</arg>
-                                        <arg>--icon</arg>
-                                        <arg>${project.basedir}/app-icon.icns</arg>
-                                        <arg>--module-path</arg>
-                                        <arg>
-                                            ${java.home}/jmods/:${project.build.directory}/modules/:${javafx.mods}/
-                                        </arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>${java-mod-name},${modules-in-use}
-                                        </arg>
-                                        <arg>--module</arg>
-                                        <arg>${java-mod-name}/${main-class}</arg>
-                                        <arg>--dest</arg>
-                                        <arg>${project.build.directory}</arg>
-                                    </args>
+                                    <jlinkOptions>--strip-native-commands --strip-debug --no-header-files --no-man-pages
+                                        --compress=2
+                                    </jlinkOptions>
+                                    <name>TestApp</name>
+                                    <icon>${project.basedir}/app-icon.icns</icon>
+                                    <modulePath>
+                                        ${java.home}/jmods/:${project.build.directory}/modules/:${javafx.mods}/
+                                    </modulePath>
+                                    <addModules>${java-mod-name},${modules-in-use}</addModules>
+                                    <module>${java-mod-name}/${main-class}</module>
+                                    <dest>${project.build.directory}</dest>
                                 </configuration>
                             </execution>
                         </executions>
@@ -373,31 +353,21 @@
                                 </goals>
                                 <configuration>
                                     <toolName>jpackage</toolName>
+                                    <jlinkOptions>--strip-native-commands --strip-debug --no-header-files --no-man-pages
+                                        --compress=2
+                                    </jlinkOptions>
+                                    <type>msi</type>
+                                    <name>TestApp</name>
+                                    <winMenuGroup>Sample</winMenuGroup>
+                                    <icon>${project.basedir}\app-icon.ico</icon>
+                                    <modulePath>
+                                        ${java.home}\jmods\;${project.build.directory}\modules\;${javafx.mods}/
+                                    </modulePath>
+                                    <addModules>${java-mod-name},${modules-in-use}</addModules>
+                                    <module>${java-mod-name}/${main-class}</module>
+                                    <dest>${project.build.directory}</dest>
                                     <args>
-                                        <arg>--jlink-options</arg>
-                                        <arg>--strip-native-commands --strip-debug --no-header-files --no-man-pages
-                                            --compress=2
-                                        </arg>
-                                        <arg>--type</arg>
-                                        <arg>msi</arg>
-                                        <arg>--name</arg>
-                                        <arg>TestApp</arg>
                                         <arg>--win-menu</arg>
-                                        <arg>--win-menu-group</arg>
-                                        <arg>Sample</arg>
-                                        <arg>--icon</arg>
-                                        <arg>${project.basedir}\app-icon.ico</arg>
-                                        <arg>--module-path</arg>
-                                        <arg>
-                                            ${java.home}\jmods\;${project.build.directory}\modules\;${javafx.mods}/
-                                        </arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>${java-mod-name},${modules-in-use}
-                                        </arg>
-                                        <arg>--module</arg>
-                                        <arg>${java-mod-name}/${main-class}</arg>
-                                        <arg>--dest</arg>
-                                        <arg>${project.build.directory}</arg>
                                     </args>
                                 </configuration>
                             </execution>
